# video-blur

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GpuBlur.hpp  VideoProcessor.hpp
src/: GpuBlur.cu  VideoProcessor.cpp  main.cpp
